--- a/time-series-and-pandas-1.ipynb
+++ b/time-series-and-pandas-1.ipynb
@@ -283,10 +283,7 @@
     "    \n",
     "    def custom_agg_func(data):\n",
     "        result_agg = (\n",
-    "            data[\"value1\"].mul(\n",
-    "                data[\"value2\"].divide(data[\"value2\"].sum())\n",
-    "            )\n",
-    "            .mean()\n",
+    "            data[\"value1\"].agg(['min', 'max', 'std', 'var', 'count'])\n",
     "        )\n",
     "        return result_agg       \n",
     "        \n",
